# robotframework-mcp

./: .gitignore  LICENSE  README.md  mcp_server.py  package.json  pyproject.toml  requirements.txt  run_mcp.py
scripts/: install-python-deps.js
